--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <properties>
         <org.richfaces.bom.version>4.3.2.Final</org.richfaces.bom.version>
         <mysql.version>5.1.25</mysql.version>
-        <springframework.version>3.2.3.RELEASE</springframework.version>
+        <springframework.version>3.2.4.RELEASE</springframework.version>
         <hibernate.version>4.2.2.Final</hibernate.version>
         <maven.checkstyle.plugin.version>2.5</maven.checkstyle.plugin.version>
         <maven.findbugs.plugin.version>2.3.1</maven.findbugs.plugin.version>
@@ -195,7 +195,7 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
-            <version>1.3.2.RELEASE</version>
+            <version>1.4.2.RELEASE</version>
         </dependency>
         <!--<dependency>-->
         <!--<groupId>org.springframework.data</groupId>-->
@@ -272,6 +272,12 @@
             <groupId>org.hibernate.javax.persistence</groupId>
             <artifactId>hibernate-jpa-2.0-api</artifactId>
             <version>1.0.1.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.el</groupId>
+            <artifactId>el-api</artifactId>
+            <version>1.0</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
