--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
         <maven.war.plugin.version>2.3</maven.war.plugin.version>
         <checkstyle.file>checkstyle.xml</checkstyle.file>
         <findbugs.exclude.file>findbugs-exclude.xml</findbugs.exclude.file>
+        <logback.version>1.0.13</logback.version>
+        <slf4j.version>1.7.5</slf4j.version>
     </properties>
 
     <build>
@@ -237,6 +239,29 @@
             <version>1.0.1.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.mockito</groupId>
