--- a/mailexpress-ui/src/main/webapp/WEB-INF/web.xml
+++ b/mailexpress-ui/src/main/webapp/WEB-INF/web.xml
@@ -41,6 +41,16 @@
         <param-name>javax.faces.FACELETS_LIBRARIES</param-name>
         <param-value>/WEB-INF/attachment.tld</param-value>
     </context-param>
+    
+    <context-param>
+        <param-name>createTempFiles</param-name>
+        <param-value>false</param-value>
+    </context-param>
+
+    <context-param>
+        <param-name>maxRequestSize</param-name>
+        <param-value>10000000</param-value>
+    </context-param>
 
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
