--- a/mailexpress-ui/src/main/webapp/WEB-INF/web.xml
+++ b/mailexpress-ui/src/main/webapp/WEB-INF/web.xml
@@ -44,7 +44,7 @@
     
     <context-param>
         <param-name>createTempFiles</param-name>
-        <param-value>false</param-value>
+        <param-value>true</param-value>
     </context-param>
 
     <context-param>
