--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <findbugs.exclude.file>findbugs-exclude.xml</findbugs.exclude.file>
         <logback.version>1.0.13</logback.version>
         <slf4j.version>1.7.5</slf4j.version>
+        <powermock.version>1.5.3</powermock.version>
     </properties>
 
     <build>
